--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@adonisjs/assembler": "^5.8.1",
     "@japa/preset-adonis": "^1.1.0",
     "@japa/runner": "^2.0.9",
+    "@types/source-map-support": "^0.5.4",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
@@ -53,7 +54,10 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^3.0.1",
+    "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
