--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/session": "^6.4.0",
     "luxon": "^3.0.1",
     "mysql": "^2.18.1",
     "phc-argon2": "^1.1.3",
