--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
       "@adonisjs/auth",
-      "@adonisjs/session"
+      "@adonisjs/session",
+      "@adonisjs/attachment-lite"
     ]
   }
 }
